fix: add tap trigger for tooltip on firefox. Now mobile tooltip is consistent cross-browser

--- a/src/components/Tooltip/styles.css
+++ b/src/components/Tooltip/styles.css
@@ -13,7 +13,7 @@
   transition: 0.3s all ease;
 }
 
-.tooltip:hover .tooltipContent {
+.showTooltip {
   visibility: visible;
   opacity: 1;
 }
@@ -53,4 +53,11 @@
   left: 100%;
   top: 50%;
   transform: translateY(-50%);
+}
+
+@media screen and (min-width: 1025px) {
+  .tooltip:hover .tooltipContent {
+    visibility: visible;
+    opacity: 1;
+  }
 }
